[gd_scene load_steps=7 format=3 uid="uid://banhbjenbn2hh"]

[ext_resource type="Script" path="res://scripts/FryingPanGame.gd" id="1_4cprh"]
[ext_resource type="PackedScene" uid="uid://dce1cvgbs2r0s" path="res://prefabs/FryingPan.tscn" id="2_4cprh"]
[ext_resource type="PackedScene" uid="uid://cvct50b2wta71" path="res://prefabs/inventory.tscn" id="2_bb1ph"]
[ext_resource type="Texture2D" uid="uid://wvshufgj10rk" path="res://assets/kitchen/cooking_base.png" id="2_y8klm"]
[ext_resource type="PackedScene" uid="uid://dyb2v3rqxy7a0" path="res://prefabs/CookFlame.tscn" id="4_1d3dt"]
[ext_resource type="PackedScene" uid="uid://chy7upl30otxo" path="res://prefabs/GameResult.tscn" id="4_bb1ph"]

[node name="FryingPanGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cprh")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_y8klm")

[node name="FryingPan" parent="." instance=ExtResource("2_4cprh")]
position = Vector2(576, 324)

[node name="Flame" parent="." instance=ExtResource("4_1d3dt")]
position = Vector2(576, 324)

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Flip at the right moment!"

[node name="Subtitle" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 50.0
offset_right = 55.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Click to Flip"

[node name="Inventory" parent="." instance=ExtResource("2_bb1ph")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 365.0
grow_horizontal = 1

[node name="ViewIngredients" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Add Ingredients"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_right = 23.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Start"

[node name="GameResult" parent="." instance=ExtResource("4_bb1ph")]
visible = false
layout_mode = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Back
"

[node name="FryingSound" type="AudioStreamPlayer" parent="."]
